<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/application_background">

    <include
        android:id="@+id/include2"
        layout="@layout/action_bar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="80dp" />

    <EditText
        android:id="@+id/usernameEditTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_field_is_empty"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTxt"
        android:id="@+id/usernameFieldIsEmpty"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/that_username_is_taken"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTxt"
        android:id="@+id/usernameTakenWarning"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/that_username_is_not_valid"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTxt"
        android:id="@+id/usernameNotValid"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_doesn_t_exist"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTxt"
        android:id="@+id/usernameDoesntExist"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/passwordEditTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTxt" />

    <TextView
        android:id="@+id/passwordFieldIsEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_field_is_empty"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTxt"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/passwordIsContainsSpaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_cannot_contain_any_spaces"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTxt"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/passwordIncorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_is_incorrect"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTxt"
        android:visibility="gone"/>

    <Button
        android:id="@+id/loginButtonLoginMenu"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/games_main_menu_button"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTxt" />

    <Button
        android:id="@+id/logoutButtonLoginMenu"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/games_main_menu_button"
        android:text="@string/logout"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTxt"
        android:visibility="gone"/>

    <Button
        android:id="@+id/registerButtonLoginMenu"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="39dp"
        android:backgroundTint="@color/login_main_menu_button"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/app_information_button_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/loginButtonLoginMenu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/status_offline"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/registerButtonLoginMenu"
        android:id="@+id/statusLoggedIn"/>



</androidx.constraintlayout.widget.ConstraintLayout>